--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -303,6 +303,28 @@ a {
   font-family: 'Poppins', sans-serif;
   font-weight: 200;
 }
+@-webkit-keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
 /* ------------------------------- END RECURRENT -- */
 header {
   height: 100vh;
@@ -624,6 +646,9 @@ section.innovation div.container div.bottom div p {
   font-size: 2rem;
   color: #F1F1F1;
   text-transform: uppercase;
+}
+section.innovation div.container div.bottom div svg {
+  animation: mover 2s infinite;
 }
 section.target {
   display: flex;
@@ -2416,6 +2441,7 @@ footer .credit p i {
   section.innovation div.container div.bottom div a svg {
     width: 30px;
     height: 75px;
+    animation: bounce;
   }
   section.innovation div.container div.bottom div p {
     font-size: 2rem;
