--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -469,6 +469,7 @@ header {
 }
 
 section.innovation {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1242,6 +1243,7 @@ section.demo {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 
   div.content {
     padding: 10% 0%;
