--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -3394,6 +3394,9 @@ section.target {
             min-height: 0vw;
           }
         }
+        div.desc{
+          font-size: calc(0.8rem + ((1vw - 3px) * 0.6914));
+        }
       }
     }
 
