--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -334,6 +334,23 @@ header {
   justify-content: flex-end;
   flex-direction: column;
   margin: 0 auto;
+  position: relative;
+}
+header .reserve a {
+  font-family: 'krub', sans-serif;
+  font-weight: 700;
+  font-size: 1rem;
+  border: 1.2px solid #181818;
+  padding: 1% 1.5%;
+  letter-spacing: 1px;
+  position: absolute;
+  right: 0;
+  top: 25%;
+  transition: all 0.3s ease;
+}
+header .reserve a:hover {
+  box-shadow: 0px 5px 6px 4px rgba(0, 0, 0, 0.1);
+  padding: 1% 2%;
 }
 header div.nav {
   height: 8%;
@@ -472,10 +489,11 @@ header div.mid .hero img {
 header .right {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   gap: 10%;
   height: 100%;
   width: 33.33333333%;
+  padding-bottom: 7%;
 }
 header .right h1 {
   font-family: 'Krub';
@@ -660,6 +678,12 @@ section.target {
   padding-bottom: 5%;
   margin-bottom: 4%;
   position: relative;
+}
+section.target div.ellipse {
+  position: absolute;
+  left: 0;
+  top: 35%;
+  transform: scaleX(-1);
 }
 section.target div.topline {
   width: 75%;
@@ -996,6 +1020,12 @@ section.fonctions {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+section.fonctions div.ellipse {
+  position: absolute;
+  right: 0;
+  bottom: -30%;
 }
 section.fonctions div.content {
   display: flex;
@@ -1110,6 +1140,15 @@ section.custom .content .droite ul li {
 }
 section.custom .content .droite ul li::marker {
   color: #d6bb73;
+}
+section.video {
+  position: relative;
+}
+section.video div.ellipse {
+  position: absolute;
+  left: 0;
+  bottom: -20%;
+  transform: scaleX(-1);
 }
 section.video div.content {
   padding: 10% 0%;
@@ -1544,8 +1583,6 @@ footer .credit p i {
   }
   header .right {
     gap: 5%;
-    width: 50%;
-    padding: 0% 5%;
   }
   header .divider {
     padding: 0% 10%;
@@ -1726,6 +1763,12 @@ footer .credit p i {
 /* ------------------------------ 1024px ----------------------------------- */
 /* ------------------------------------------------------------------------- */
 @media (max-width: 1024px) {
+  header .right {
+    width: 50%;
+  }
+  header .mid {
+    width: 50%;
+  }
   section.target .topline {
     width: 100% !important;
     justify-content: center !important;
@@ -1928,11 +1971,12 @@ footer .credit p i {
 /* ------------------------------ 768px ----------------------------------- */
 /* ------------------------------------------------------------------------- */
 @media (max-width: 768px) {
+  header .reserve {
+    display: none;
+  }
   header div.main {
     flex-direction: column-reverse;
-    align-items: center;
-    position: relative;
-    padding: 0%;
+    justify-content: flex-end;
   }
   header div.main div.mid {
     width: 100%;
@@ -1955,6 +1999,7 @@ footer .credit p i {
     align-items: center;
     text-align: center;
     width: 100%;
+    padding: 0;
   }
   header div.main div.right p {
     text-align: center;
@@ -2115,12 +2160,6 @@ footer .credit p i {
 /* ------------------------------ 425px ----------------------------------- */
 /* ------------------------------------------------------------------------- */
 @media (max-width: 425px) {
-  header div.main {
-    flex-direction: column-reverse;
-    align-items: center;
-    position: relative;
-    padding: 0%;
-  }
   header div.main div.mid {
     width: 100%;
     height: 80%;
@@ -2136,9 +2175,7 @@ footer .credit p i {
     height: auto;
   }
   header div.main div.right {
-    align-items: center;
-    text-align: center;
-    width: 100%;
+    justify-content: center;
   }
   header div.main div.right p {
     text-align: center;
@@ -2556,6 +2593,9 @@ footer .credit p i {
     padding-bottom: 0;
     margin-bottom: 0;
   }
+  section.target .ellipse {
+    display: none;
+  }
   section.target div.content {
     width: 100%;
   }
@@ -2582,6 +2622,12 @@ footer .credit p i {
   }
   section.target div.content div.container div.mycard.active .slide2 {
     opacity: 1;
+  }
+  section.fonctions .ellipse {
+    display: none;
+  }
+  section.video .ellipse {
+    display: none;
   }
 }
 /* ------------------------------------------------------------------------- */
